--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-parallax": "^3.5.1",
-    "react-scroll-parallax": "^3.4.2"
+    "react-router-dom": "^6.15.0",
+    "react-scroll-parallax": "^3.4.2",
+    "react-snowfall": "^1.2.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
